# pyTwitchAPI

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  webhook_example.py
docs/: changelog.rst  conf.py  index.rst  requirements.txt  tutorials.rst  v3-migration.rst  v4-migration.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: switcher.json
docs/_static/css/: custom.css  rtd_dark.css
docs/_static/icons/: pypi-icon.js
docs/_templates/autosummary/: module.rst
docs/modules/: twitchAPI.chat.middleware.rst  twitchAPI.chat.rst  twitchAPI.eventsub.base.rst  twitchAPI.eventsub.rst  twitchAPI.eventsub.webhook.rst  twitchAPI.eventsub.websocket.rst  twitchAPI.helper.rst  twitchAPI.oauth.rst  twitchAPI.object.api.rst  twitchAPI.object.base.rst  twitchAPI.object.eventsub.rst  twitchAPI.object.rst  twitchAPI.pubsub.rst  twitchAPI.twitch.rst  twitchAPI.type.rst  twitchAPI.types.rst  twitchAPI.webhook.rst
docs/tutorial/: chat-use-middleware.rst  mocking.rst  reuse-user-token.rst  user-auth-headless.rst
twitchAPI/: __init__.py  chat.py  eventsub.py  helper.py  oauth.html  oauth.py  object.py  objects.py  pubsub.py  scope.py  twitch.py  type.py  types.py  webhook.py
twitchAPI/chat/: __init__.py  middleware.py
twitchAPI/eventsub/: __init__.py  base.py  webhook.py  websocket.py
twitchAPI/object/: __init__.py  api.py  base.py  eventsub.py
(+22 files in other folders)
