[metadata]
name=twitchAPI
version=2.2.2
url=https://github.com/Teekeks/pyTwitchAPI
author=Lena "Teekeks" During
author_email=info@teawork.de
description=A Python 3.7+ implementation of the Twitch Helix API, its Webhook and PubSub
long_description=file:README.md
long_description_content_type=text/markdown
license=MIT
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Communications
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe=true
install_requirements=
    aiohttp
    requests
    python-dateutil
    websockets

